data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1626.wast
;; 7. **Test 7**: - **Description**: Nested `block` structures where a `br_if` inside an inner block targets a sibling block rather than an outer block. - **Constraint Checked**: Ensure `br_if` skips sibling blocks correctly and targets outer blocks as specified.

(assert_invalid
  (module 
    (func 
      (block 
        (block 
          (br_if 1 (i32.const 1) (i32.const 1))
        )
      )
    )
  )
  "unexpected target"
)